// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Playlist Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <a
      class=" svelte-16scfh8"
      href="#/playlist/1"
    >
      <header>
        <h3>
          My favourites
        </h3>
         
        <h4
          class="svelte-16scfh8"
        >
          3 tracks
        </h4>
      </header>
       
      <p
        class="controls svelte-16scfh8"
      >
        <button
          class="svelte-j6xhgj primary iconOnly large"
          data-testid="play"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            play_arrow
          </i>
           
           
        </button>
         
        <button
          class="svelte-j6xhgj primary iconOnly large"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            playlist_add
          </i>
           
           
        </button>
      </p>
    </a>
  </div>
</section>
`;

exports[`Storyshots Components/Playlist Single Track 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <a
      class=" svelte-16scfh8"
      href="#/playlist/1"
    >
      <header>
        <h3>
          My favourites
        </h3>
         
        <h4
          class="svelte-16scfh8"
        >
          1 track
        </h4>
      </header>
       
      <p
        class="controls svelte-16scfh8"
      >
        <button
          class="svelte-j6xhgj primary iconOnly large"
          data-testid="play"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            play_arrow
          </i>
           
           
        </button>
         
        <button
          class="svelte-j6xhgj primary iconOnly large"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            playlist_add
          </i>
           
           
        </button>
      </p>
    </a>
  </div>
</section>
`;
